##
## Makefile.am for libusbwall in /home/phil/Travail/ECE/usbwall/usbwall-lib
##
## Made by Philippe THIERRY
## Login   <Philippe THIERRY@reseau-libre.net>
##
## Started on  jeu. 19 janv. 2012 20:59:47 CET Philippe THIERRY
## Last update jeu. 19 janv. 2012 20:59:47 CET Philippe THIERRY
##

SUBDIRS = src doc .

doc:
	$(MAKE) -C doc all

.PHONY: doc

ACLOCAL_AMFLAGS = -I m4

EXTRA_DIST = AUTHORS README INSTALL ChangeLog 

CLEANFILES = *~ .*.swp .*.swo output* *.gcov *.gprof

